# jwst-preprint-automator

./: .gitignore  CLAUDE.md  README.md  jwst-preprint-doi-analyzer.py  jwst-preprint-doi-reranked_snippets_analyzer.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
jwst_preprint_analyzer/: __init__.py  __main__.py  analyzer.py  models.py  reporting.py
jwst_preprint_analyzer/analysis/: __init__.py  doi.py  science.py
jwst_preprint_analyzer/clients/: __init__.py  ads.py  cohere.py  gpt_reranker.py  openai.py
jwst_preprint_analyzer/processing/: __init__.py  converter.py  downloader.py  text_extractor.py
jwst_preprint_analyzer/utils/: __init__.py  cache.py  prompts.py
prompts/: doi_system.txt  doi_user.txt  doi_validate_system.txt  doi_validate_user.txt  rerank_doi_query.txt  rerank_science_query.txt  science_system.txt  science_user.txt  science_validate_system.txt  science_validate_user.txt
scripts/: process_golden_sample.py
tests/: __init__.py  test_ads_client.py  test_cache.py  test_models.py  test_prompts.py  test_text_extractor.py
